			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

02-Feb-2003
~~~~~~~~~~~
Fixed clipping and wrapping problems with pinboard icon text.

01-Feb-2003
~~~~~~~~~~~
Don't use double-buffering for the pinboard. This might make things flicker
slightly, but it's much faster on some systems.
Updated Spanish translation (Marcelo Ramos).

31-Jan-2003
~~~~~~~~~~~
Added Bookmarks 'Recently Visited' submenu (Stephen Watson).

28-Jan-2003
~~~~~~~~~~~
Replaced some of the icons with some GNOME ones (slightly modified in some
cases).

27-Jan-2003
~~~~~~~~~~~
Slightly adjusted the 'normal' icon height to be the same size as GNOME to
make sharing icons easier.
Updated Polish translation (Marcin Juszkiewicz).

26-Jan-2003
~~~~~~~~~~~
Bugfix: Symlinking to an application required the symlink, rather than the
	target directory, to have the same owner as the AppRun (Keith Warno).

25-Jan-2003
~~~~~~~~~~~
Bugfix: Hyper and Super modifiers didn't work properly as icon shortcuts.

23-Jan-2003
~~~~~~~~~~~
Work around changes in Gtk+-2.2 that stopped the panel from appearing on all
workspaces.
Add scrollbars to bookmarks editor window (requested by George De Bruin).

22-Jan-2003
~~~~~~~~~~~
Bugfix: Filer would quit if only the Bookmarks editor window was open (reported
	by Bernard Jungen).

20-Jan-2003
~~~~~~~~~~~
New option to sort capitalised names first (requested by Paul Etchells and
others).

19-Jan-2003
~~~~~~~~~~~
Updated Spanish translation (Marcelo Ramos).
Fixed wheel mouse scroll bug in List View (reported by Vincent Lefevre and
others).
Attempt to improve the autosizing by examining the item with the longest name.
Don't scale icons up in Huge mode.
In translated <About> sections in AppInfo.xml files, allow a 'label=' attribute
to translate the key (requested by Guido Schimmels).

18-Jan-2003
~~~~~~~~~~~
Added dnotify support, so that on Linux the filer now updates automatically
when a directory is changed (requested by Taras and Dave C).

16-Jan-2003
~~~~~~~~~~~