@@ -13,8 +13,6 @@ dnotify: should wait a little before rescanning.
 
 GtkTreeView bindings (eg, ^N) override menu bindings.
 
-Autoscrolling during DnD has stopped working.
-
 File2.html comes before File.html. Also, very large numbers aren't handled.
 
 Can't drag to a selected item (from another window).
