@@ -2,6 +2,10 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+07-Feb-2003
+~~~~~~~~~~~
+Auto-scrolling during drag-and-drop works again, and now in list view too.
+
 02-Feb-2003
 ~~~~~~~~~~~
 Fixed clipping and wrapping problems with pinboard icon text.
